 * Fixed New Zealand states/region info in l10n data
 * Improvements to tax calc code
 * Updated swedish translation
 * Improve checks to make sure dupe emails are not used by accounts
 * Fixed a bug with PDF generation in windows
 * Improved product export capability to support categories
 * Added Brazilian Portuguese translation
 * Added a subscription product
 * Cleaned up breadcrumbs to make it easier to modify via css
 * Removed storage of ccv field in database
 * Actually keep track of items when they are sold
 * Swedish and German translation updates
 * Can now prevent someone from purchasing an item that is out of stock
 * Google feed support
 * New Bulgarian translation
 * Korean translation
 * Recently viewed items support
 * Wishlist support
 * UI improvements to the admin site
 * Added some javascript to disable shipping address fields if "same shipping and billing address are used"
 * SEO optimizations to templates
 * Performance improvements when using Configurable Products
 * Fix some unicode issues with some of the shipping and payment processing backends
 * Trustcommerce bug fixes
 * Updated documentation to use sphinx

Version 0.6, October 30, 2007
----------------
 * Removed dependency on Webda and added new l10n models
 * Added capability to rate and review products
 * Improved capabilities for users to manage their account information
 * Creation of a simple inventory management interface
 * Multiple bug fixes and code cleanups
 * New configuration option to allow user to set image upload directory name
 * Improved error handling for loading data
 * Allow manual product ordering in a category
 * Remove most custom settings from local_settings.py, instead using the satchmo.configuration app
 * Added a cache manager
 * Added TrustCommerce as a processing module
 * New downloadable product type
 * New custom product type
 * Added Swedish translation

Version 0.5, August 22, 2007
----------------------------
 * First official package launch